tests/ui/higher-ranked/leak-check/candidate-from-env-universe-err-project.next.stderr
error[E0271]: type mismatch resolving `<T as Trait<'a>>::Assoc == usize`
  --> $DIR/candidate-from-env-universe-err-project.rs:41:24
   |
LL |     projection_bound::<T>();
   |                        ^ type mismatch resolving `<T as Trait<'a>>::Assoc == usize`
   |
note: types differ
  --> $DIR/candidate-from-env-universe-err-project.rs:17:18
   |
LL |     type Assoc = usize;
   |                  ^^^^^
note: required by a bound in `projection_bound`
  --> $DIR/candidate-from-env-universe-err-project.rs:21:42
   |
LL | fn projection_bound<T: for<'a> Trait<'a, Assoc = usize>>() {}
   |                                          ^^^^^^^^^^^^^ required by this bound in `projection_bound`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0271`.
